# configs

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md
.github/workflows/: bazel_ci.yaml
apps/docker-compose/: junk-cpp-echo-server.yaml  junk-go-echo-server.yaml  junk-python-echo-server.yaml  junk-rust-echo-server.yaml
apps/keepassxc/: keepassxc.ini
apps/nginx/: chegoryu.me  chprog.com
apps/opencode/: opencode.json
apps/skhd/: skhdrc
apps/ufw/nginx_server/: user.rules  user6.rules
apps/vlc/: vlcrc
apps/yabai/: yabairc
clion/options/: updates.xml
devtools/cargo/: config.toml
devtools/clang-tidy/: .clang-tidy
devtools/clangd/: .clangd  config.yaml
devtools/git/: config_my  config_pinely  ignore
devtools/ide/cursor/: BUILD.bazel  export_extensions.sh  install_extensions.sh  user_settings.json
devtools/ide/goland/options/: updates.xml
devtools/ide/visual-studio-code/: export_extensions.sh  install_extensions.sh
git/: .gitconfig
goland/options/: editor.xml
ide/pycharm/options/: updates.xml
ide/sublime-text/: preferences.sublime-settings
ide/visual-studio-code/: install.sh
intellij-idea/options/: updates.xml
iterm2/: chegoryu_profile.json
nginx/: chprog.com
nvim/: init.lua
nvim/lua/chegoryu/: plugins-setup.lua
nvim/lua/chegoryu/core/: keymaps.lua  options.lua
nvim/lua/chegoryu/plugins/: autopairs.lua  lualine.lua  nvim-cmp.lua  nvim-tree.lua  telescope.lua  trailing-whitespace.lua  treesitter.lua  trim.lua
nvim/lua/chegoryu/plugins/lsp/: lspconfig.lua  lspsaga.lua  mason.lua  null-ls.lua
pycharm/options/: editor.xml
shell/brew/: BUILD.bazel  export_list.sh  list.txt
shell/clang-tidy/: .clang-tidy
shell/clangd/: .clangd
shell/common/: BUILD.bazel  git.sh  runfiles_init.bash
shell/fzf/: .gitignore  BUILD.bazel  install.sh
shell/iterm2/: chegoryu_profile.json
shell/nvim/: .gitignore  BUILD.bazel  config_test.sh  init.lua  install_linux.sh  lazy-lock.json
shell/nvim/lua/chegoryu/: lazy.lua  plugins-setup.lua
shell/nvim/lua/chegoryu/core/: config.lua  filetype-options.lua  init.lua  keymaps.lua  make-and-run.lua  options.lua  setup.lua
shell/nvim/lua/chegoryu/core/filetype-options/: cmake.lua  common.lua  cpp.lua  csharp.lua  go.lua  init.lua  java.lua  kotlin.lua  python.lua  rust.lua  shell.lua
shell/nvim/lua/chegoryu/plugins/: alpha-nvim.lua  auto-session.lua  autopairs.lua  copilot.lua  gitsigns.lua  highlight-whitespace.lua  indent-blankline.lua  init.lua  nvim-autopairs.lua  nvim-cmp.lua  nvim-surround.lua  nvim-tree.lua  nvim-treesitter-text-objects.lua  nvim-treesitter.lua  nvim-web-devicons.lua  repolink.lua  telescope.lua  template.lua  trailing-whitespace.lua  treesitter.lua  trim.lua
shell/nvim/lua/chegoryu/plugins/common/: plenary.lua
shell/nvim/lua/chegoryu/plugins/editor/: comment.lua  copilot-cmp.lua  copilot.lua  gitsigns.lua  notice.lua  nvim-cmp.lua  nvim-notify.lua  nvim-treesitter-text-objects.lua  nvim-treesitter.lua  repolink.lua  vim-maximizer.lua  vim-replace-with-register.lua  vim-tmux-navigator.lua
shell/nvim/lua/chegoryu/plugins/lsp/: lspconfig.lua  lspsaga.lua  mason.lua  none-ls.lua  null-ls.lua  rustaceanvim.lua
shell/nvim/lua/chegoryu/plugins/ui/: colorscheme.lua  highlight-whitespace.lua  indent-blankline.lua  lualine.lua  nvim-tree.lua  telescope.lua
shell/ssh/: config
shell/tmux/: .tmux.conf  BUILD.bazel  install.sh  install_dependencies.sh  install_linux.sh  tmux.conf
shell/vim/: .vimrc
shell/zsh/: .p10k.zsh  .zshrc  BUILD.bazel  install.sh  install_dependencies.sh
ssh/: config
templates/: BUILD.bazel  defs.bzl
templates/bash/: BUILD.bazel  empty.sh.tpl
templates/c/: BUILD.bazel  empty.c
templates/cpp/: BUILD.bazel  empty.cpp
templates/cpp/competitive_programming/: bigint.cpp  competitive_programming_main.cpp  cp_main.cpp  fastio.cpp
templates/csharp/: BUILD.bazel  empty.cs
templates/go/: BUILD.bazel  empty.go
templates/go/competitive_programming/: cp_main.go
templates/java/: BUILD.bazel  empty.java
templates/java/competitive_programming/: cp_main.java
templates/kotlin/: BUILD.bazel  empty.kt
templates/kotlin/competitive_programming/: cp_main.kt
templates/latex/: olympiad_editorial.latex
templates/python/: BUILD.bazel  empty.py
templates/python/competitive_programming/: cp_main.py
templates/rust/: BUILD.bazel
templates/rust/competitive_programming/: cp_build.rs  cp_config.toml  cp_main.rs  heaponly_alloc.rs
tmux/: .tmux.conf  install.sh
tools/format/: BUILD.bazel  format.sh  format_test.sh
vim/: .vimrc
visual-studio-code/: user_settings.json
vlc/: vlcrc
