module(name = "configs")

bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_cc", version = "0.2.19")
bazel_dep(name = "rules_go", version = "0.60.0")
bazel_dep(name = "rules_python", version = "1.9.0")
bazel_dep(name = "rules_rust", version = "0.69.0")
bazel_dep(name = "rules_shell", version = "0.8.0")

# Hermetic zero-sysroot clang/LLVM toolchain (static prebuilts, bazeled runtimes).
bazel_dep(name = "llvm", version = "0.8.11")

register_toolchains("@llvm//toolchain:all")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.26.1")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.defaults(python_version = "3.12")
python.toolchain(python_version = "3.12")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    versions = ["1.93.1"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "stylua_linux_x86_64",
    build_file_content = 'exports_files(["stylua"])',
    sha256 = "ca6f1cf52eaf69e6632b81acef9c197aa24b85eb30d2455a35e7dbe28ae77c72",
    urls = ["https://github.com/JohnnyMorganz/StyLua/releases/download/v2.5.2/stylua-linux-x86_64-musl.zip"],
)

http_archive(
    name = "stylua_macos_aarch64",
    build_file_content = 'exports_files(["stylua"])',
    sha256 = "92ff0889e16324801bc072692974bb67f8161e62010fc90f96c62a17f81f32c7",
    urls = ["https://github.com/JohnnyMorganz/StyLua/releases/download/v2.5.2/stylua-macos-aarch64.zip"],
)

http_archive(
    name = "stylua_macos_x86_64",
    build_file_content = 'exports_files(["stylua"])',
    sha256 = "53c50a1605d0a6345d160a1a5a21db40bcf2bf9cd23c17f7c277a63a1bff3a7f",
    urls = ["https://github.com/JohnnyMorganz/StyLua/releases/download/v2.5.2/stylua-macos-x86_64.zip"],
)

NEOVIM_BUILD_FILE_CONTENT = """
exports_files(["bin/nvim"])

filegroup(
    name = "runtime",
    srcs = glob(["share/nvim/runtime/**"]),
    visibility = ["//visibility:public"],
)
"""

# Neovim version is pinned to the one built by shell/nvim/install_linux.sh.
# The linux archive is the official unsupported build for older glibc.
http_archive(
    name = "neovim_linux_x86_64",
    build_file_content = NEOVIM_BUILD_FILE_CONTENT,
    sha256 = "73c54f0b4e79fc0317f8d5cb91defe85d676024c1733a2b0861eac21bde81b72",
    strip_prefix = "nvim-linux-x86_64",
    urls = ["https://github.com/neovim/neovim-releases/releases/download/v0.12.0/nvim-linux-x86_64.tar.gz"],
)

http_archive(
    name = "neovim_macos_aarch64",
    build_file_content = NEOVIM_BUILD_FILE_CONTENT,
    sha256 = "cf0137d6961785c34926f879b7a5b5fa0371ab0d6e2959e390e2f00b46165ce9",
    strip_prefix = "nvim-macos-arm64",
    urls = ["https://github.com/neovim/neovim/releases/download/v0.12.0/nvim-macos-arm64.tar.gz"],
)

http_archive(
    name = "neovim_macos_x86_64",
    build_file_content = NEOVIM_BUILD_FILE_CONTENT,
    sha256 = "309b3252a04bf8e4043389d3ea9bbb94e17becea2cde74f11f948b4775bbe3d4",
    strip_prefix = "nvim-macos-x86_64",
    urls = ["https://github.com/neovim/neovim/releases/download/v0.12.0/nvim-macos-x86_64.tar.gz"],
)
