load("@rules_shell//shell:sh_library.bzl", "sh_library")

sh_library(
    name = "runfiles_init",
    srcs = ["runfiles_init.bash"],
    visibility = ["//visibility:public"],
    deps = ["@rules_shell//shell/runfiles"],
)

sh_library(
    name = "git",
    srcs = ["git.sh"],
    visibility = ["//visibility:public"],
)
