load("@rules_shell//shell:sh_binary.bzl", "sh_binary")

sh_binary(
    name = "install_linux",
    srcs = ["install_linux.sh"],
)

sh_binary(
    name = "install_dependencies",
    srcs = ["install_dependencies.sh"],
    deps = [
        "//shell/common:git",
        "//shell/common:runfiles_init",
    ],
)
