load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("//templates:defs.bzl", "template_source")

package(default_visibility = ["//templates:__pkg__"])

template_source(
    name = "empty_c_src",
    src = "empty.c",
    out = "generated/empty.c",
)

cc_binary(
    name = "empty_c",
    srcs = ["generated/empty.c"],
)
